--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_riverpod: ^3.0.3
   dartz: ^0.10.1
   go_router: ^17.0.0
+  cached_network_image: ^3.4.1
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
