--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   go_router: ^17.0.0
   cached_network_image: ^3.4.1
   skeletonizer: ^2.1.0+1
+  country_picker: ^2.0.25
 
 dev_dependencies:
   flutter_test:
