--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:label="tringo_app"
+        android:label="Tringo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
