--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,46 +1,37 @@
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- Base -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Phone/Calls -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-    <!-- ❌ This won't work for normal apps (system only). Better remove -->
-    <!-- <uses-permission
-        android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
-        tools:ignore="ProtectedPermissions" /> -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
-    <!-- Contacts -->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
-    <!-- Overlay + foreground -->
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
-    <!-- Optional -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <application
-        android:label="Tringo"
         android:name="${applicationName}"
+        android:label="Tringo"
         android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:taskAffinity=""
             android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode">
 
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
@@ -50,90 +41,91 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-        <!-- ✅ CALL SCREENING SERVICE (Incoming call detect) -->
+        <!-- ✅ FIXED NAME -->
+        <activity
+            android:name=".TringoIncomingPopupActivity"
+            android:exported="false"
+            android:launchMode="singleTask"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
         <service
             android:name=".TringoCallScreeningService"
             android:permission="android.permission.BIND_SCREENING_SERVICE"
-            android:exported="true"
-            tools:targetApi="n">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.telecom.CallScreeningService" />
             </intent-filter>
         </service>
 
-
-        <!-- ✅ OVERLAY FOREGROUND SERVICE (Popup show) -->
         <service
             android:name=".TringoOverlayService"
             android:exported="false"
-            android:foregroundServiceType="dataSync" />
+            android:foregroundServiceType="phoneCall|dataSync" />
 
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
 
     </application>
-
-    <!-- ✅ Combine queries into ONE block (recommended) -->
-    <queries>
-        <package android:name="com.whatsapp" />
-
-        <intent>
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="https" />
-        </intent>
-
-        <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT" />
-            <data android:mimeType="text/plain" />
-        </intent>
-    </queries>
-
 </manifest>
 
-<!--<manifest xmlns:android="http://schemas.android.com/apk/res/android"-->
+
+    <!--<manifest xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--    xmlns:tools="http://schemas.android.com/tools">-->
 
-<!--    &lt;!&ndash; Permissions for SIM / phone number &ndash;&gt;-->
+<!--    &lt;!&ndash; ================= PERMISSIONS ================= &ndash;&gt;-->
+
 <!--    <uses-permission android:name="android.permission.INTERNET" />-->
 
+<!--    &lt;!&ndash; Phone / Call &ndash;&gt;-->
 <!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
 <!--    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />-->
-<!--    <uses-permission-->
-<!--        android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"-->
-<!--        tools:ignore="ProtectedPermissions" />-->
 
-<!--    &lt;!&ndash; Optional / extra &ndash;&gt;-->
+<!--    &lt;!&ndash; Contacts &ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_CONTACTS" />-->
+
+<!--    &lt;!&ndash; Overlay + Foreground &ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL" />-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" tools:ignore="ProtectedPermissions"/>-->
+
+<!--    &lt;!&ndash; Optional &ndash;&gt;-->
 <!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 <!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
 <!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
-
-<!--    <uses-permission android:name="android.permission.READ_CONTACTS"/>-->
-<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>-->
+<!--    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />-->
+<!--    <uses-permission android:name="android.permission.INTERNET"/>-->
 <!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>-->
 <!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>-->
-
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL"/>-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>-->
 <!--    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>-->
+<!--    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />-->
 
+
+
+<!--    &lt;!&ndash; ================= APPLICATION ================= &ndash;&gt;-->
 
 <!--    <application-->
-<!--        android:label="Tringo"-->
 <!--        android:name="${applicationName}"-->
+<!--        android:label="Tringo"-->
 <!--        android:icon="@mipmap/ic_launcher">-->
 
+<!--        &lt;!&ndash; Flutter Main Activity &ndash;&gt;-->
 <!--        <activity-->
 <!--            android:name=".MainActivity"-->
 <!--            android:exported="true"-->
 <!--            android:launchMode="singleTop"-->
-<!--            android:taskAffinity=""-->
 <!--            android:theme="@style/LaunchTheme"-->
-<!--            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
 <!--            android:hardwareAccelerated="true"-->
-<!--            android:windowSoftInputMode="adjustResize">-->
+<!--            android:windowSoftInputMode="adjustResize"-->
+<!--            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode">-->
 
 <!--            <meta-data-->
 <!--                android:name="io.flutter.embedding.android.NormalTheme"-->
@@ -143,25 +135,50 @@
 <!--                <action android:name="android.intent.action.MAIN" />-->
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
-
 <!--        </activity>-->
+
+<!--        <activity-->
+<!--            android:name=".TringoCallerPopupActivity"-->
+<!--            android:exported="false"-->
+<!--            android:theme="@style/Theme.Tringo.Popup"-->
+<!--            android:launchMode="singleTop"-->
+<!--            android:excludeFromRecents="true"-->
+<!--            android:showWhenLocked="true"-->
+<!--            android:turnScreenOn="true" />-->
+
+<!--        &lt;!&ndash; ================= CALL SCREENING SERVICE ================= &ndash;&gt;-->
+<!--        &lt;!&ndash; ⭐ THIS IS WHAT MAKES TRINGO APPEAR IN "DEFAULT CALLER ID & SPAM APP" LIST &ndash;&gt;-->
+<!--        <service-->
+<!--            android:name=".TringoCallScreeningService"-->
+<!--            android:permission="android.permission.BIND_SCREENING_SERVICE"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.telecom.CallScreeningService" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
+
+
+<!--        &lt;!&ndash; ================= OVERLAY SERVICE ================= &ndash;&gt;-->
+<!--        <service-->
+<!--            android:name=".TringoOverlayService"-->
+<!--            android:exported="false"-->
+<!--            android:foregroundServiceType="phoneCall|dataSync" />-->
 
 <!--        <meta-data-->
 <!--            android:name="flutterEmbedding"-->
 <!--            android:value="2" />-->
 <!--    </application>-->
+
+<!--    &lt;!&ndash; ================= QUERIES ================= &ndash;&gt;-->
 <!--    <queries>-->
-<!--        &lt;!&ndash; For WhatsApp app &ndash;&gt;-->
 <!--        <package android:name="com.whatsapp" />-->
 
-<!--        &lt;!&ndash; For any https browser VIEW intent &ndash;&gt;-->
 <!--        <intent>-->
 <!--            <action android:name="android.intent.action.VIEW" />-->
 <!--            <category android:name="android.intent.category.BROWSABLE" />-->
 <!--            <data android:scheme="https" />-->
 <!--        </intent>-->
-<!--    </queries>-->
-<!--    <queries>-->
+
 <!--        <intent>-->
 <!--            <action android:name="android.intent.action.PROCESS_TEXT" />-->
 <!--            <data android:mimeType="text/plain" />-->
