--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_contacts: ^1.1.9+2
   connectivity_plus: ^7.0.0
+  mobile_scanner: ^3.5.0
 
 
 dev_dependencies:
