--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   connectivity_plus: ^7.0.0
   mobile_scanner: ^3.5.0
+  share_plus: ^10.0.2
 
 
 dev_dependencies:
