--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   mobile_scanner: ^3.5.0
   share_plus: ^10.0.2
   flutter_html: ^3.0.0-beta.2
+  video_player: ^2.8.2
+  qr_flutter: ^4.1.0
 
 
 dev_dependencies:
@@ -91,6 +93,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - Assets/Images/
+   - Assets/Videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
