--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <!-- ✅ REQUIRED -->
     <uses-permission
         android:name="android.permission.READ_PHONE_STATE"
@@ -44,7 +46,6 @@
         android:name="android.app.Application"
         android:icon="@mipmap/ic_launcher"
         android:label="Tringo"
-        android:debuggable="true"
         android:extractNativeLibs="true"
         android:enableOnBackInvokedCallback="true">
 
