--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   video_player: ^2.8.2
   qr_flutter: ^4.1.0
+  google_maps_flutter: ^2.6.1
 
 
 dev_dependencies:
